--- a/Evaluations/DEBUG/debug_phoenix_evals__llm_as_a_judge.ipynb
+++ b/Evaluations/DEBUG/debug_phoenix_evals__llm_as_a_judge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "82ce25f7",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
     "\n",
     "import os\n",
     "import pandas as pd\n",
-    "import json\n",
+    "import re\n",
     "from phoenix.evals import OpenAIModel, QA_PROMPT_TEMPLATE, QA_PROMPT_RAILS_MAP, llm_classify\n",
     "from phoenix.experiments.types import EvaluationResult"
    ]
