08_async functions, adding langsmith evaluations - llm as a judge - output correctness

--- a/Evaluations/langsmith_create_golden_dataset.ipynb
+++ b/Evaluations/langsmith_create_golden_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "a23d96bb",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset 'czsu agent' found with ID: bdc1e6ed-5a24-4510-992d-3a4d30e6eb8a\n",
-      "Added 25 new examples to dataset 'czsu agent'.\n"
+      "Dataset 'czsu agent' found with ID: e585a306-7113-491d-ba41-bc03c09eb612\n",
+      "Added 29 new examples to dataset 'czsu agent'.\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
     "    \"Was there any quarter where Plzeň's women outnumbered men by >15,000?\",  # \"No (max difference 11235)\"\n",
     "\n",
     "    # Aggregations\n",
-    "    \"What was the average male population across all regions at period end?\",  # \"≈326000\"\n",
+    "    \"What was the average male population across all regions at period end?\",  # \"381994.5\"\n",
     "    \"Which region had the lowest total population at the end of Q3?\",  # \"Karlovy Vary (293218)\"\n",
     "    \"Count how many regions had <500k total residents mid-period\",  # \"5 (Karlovy Vary, Liberec, Vysočina, Olomouc, Zlín)\"\n",
     "    \"What was the maximum female population recorded in any region?\",  # \"716056 (Prague)\"\n",
