--- a/other/testing_PandasQueryTool.ipynb
+++ b/other/testing_PandasQueryTool.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "6fd89259",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "    CallbackManagerForToolRun,\n",
     ")\n",
     "from langchain_core.tools import ToolException\n",
+    "import json  # Import json for structured result formatting\n",
     "\n",
     "#===============================================================================\n",
     "# CONSTANTS & CONFIGURATION\n",
@@ -37,10 +38,14 @@
     "# Constants\n",
     "TOOL_ID = 20  # Static ID for PandasQueryTool\n",
     "\n",
-    "# # Load data once at module level\n",
-    "# base_dir = Path(__file__).resolve().parents[2]\n",
-    "# data_path = base_dir / \"data\" / \"OBY01PDT01.csv\"\n",
-    "# df = pd.read_csv(data_path)\n",
+    "# Load data once at module level\n",
+    "   \n",
+    "try:\n",
+    "    BASE_DIR = Path(__file__).resolve().parents[2]\n",
+    "except NameError:\n",
+    "    BASE_DIR = Path(os.getcwd()).parents[0]\n",
+    "data_path = BASE_DIR / \"data\" / \"OBY01PDT01.csv\"\n",
+    "df = pd.read_csv(data_path)\n",
     "\n",
     "#===============================================================================\n",
     "# HELPER FUNCTIONS\n",
@@ -119,41 +124,38 @@
     "        query: str, \n",
     "        run_manager: Optional[CallbackManagerForToolRun] = None\n",
     "    ) -> str:\n",
-    "        \"\"\"Execute the pandas query.\n",
-    "        \n",
-    "        Args:\n",
-    "            query: A pandas query string to be executed\n",
-    "            run_manager: Optional callback manager\n",
-    "            \n",
-    "        Returns:\n",
-    "            String representation of the query result\n",
-    "        \"\"\"\n",
-    "        # Load data here\n",
-    "        # base_dir = Path(__file__).resolve().parents[2]\n",
-    "        # data_path = base_dir / \"data\" / \"OBY01PDT01.csv\"\n",
-    "        df = pd.read_csv(\"OBY01PDT01.csv\")\n",
-    "        \n",
     "        try:\n",
-    "            check_query_safety(query)  # Add safety check\n",
+    "            check_query_safety(query)\n",
+    "            \n",
+    "            # Debug print query\n",
+    "            debug_print(f\"{TOOL_ID}: =====================================\")\n",
+    "            debug_print(f\"{TOOL_ID}: Executing query:\")\n",
+    "            debug_print(f\"{TOOL_ID}: {query}\")\n",
+    "            debug_print(f\"{TOOL_ID}: =====================================\")\n",
+    "            \n",
+    "            # Execute query\n",
     "            result = eval(query, {'df': df, 'pd': pd}, {})\n",
     "            \n",
     "            # Format the result\n",
     "            if isinstance(result, pd.Series) and len(result) == 1:\n",
-    "                result_str = str(result.iloc[0])\n",
+    "                result_value = str(result.iloc[0])\n",
     "            elif isinstance(result, pd.DataFrame) and result.shape == (1, 1):\n",
-    "                result_str = str(result.iat[0, 0])\n",
+    "                result_value = str(result.iat[0, 0])\n",
     "            elif isinstance(result, (pd.Series, pd.DataFrame)):\n",
-    "                result_str = result.to_string(index=False)\n",
+    "                result_value = result.to_string(index=False)\n",
     "            else:\n",
-    "                result_str = str(result)\n",
+    "                result_value = str(result)\n",
     "            \n",
-    "            # Debug print the tool result\n",
-    "            debug_print(f\"{TOOL_ID}: =====================================\")\n",
-    "            debug_print(f\"{TOOL_ID}: Tool result:\")\n",
-    "            debug_print(f\"{TOOL_ID}: {result_str}\")\n",
+    "            # Debug print result\n",
+    "            debug_print(f\"{TOOL_ID}: Query result:\")\n",
+    "            debug_print(f\"{TOOL_ID}: {result_value}\")\n",
     "            debug_print(f\"{TOOL_ID}: =====================================\")\n",
     "            \n",
-    "            return result_str\n",
+    "            # Return both query and result for state tracking\n",
+    "            return json.dumps({\n",
+    "                \"query\": query,\n",
+    "                \"result\": result_value\n",
+    "            }, ensure_ascii=False)\n",
     "            \n",
     "        except Exception as e:\n",
     "            raise ToolException(f\"Query error: {str(e)}\")\n",
@@ -164,13 +166,12 @@
     "        run_manager: Optional[AsyncCallbackManagerForToolRun] = None,\n",
     "    ) -> str:\n",
     "        \"\"\"Execute the pandas query asynchronously.\"\"\"\n",
-    "        return self._run(query, run_manager)\n",
-    "\n"
+    "        return self._run(query, run_manager)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "606b367a",
    "metadata": {},
    "outputs": [
@@ -179,10 +180,15 @@
      "output_type": "stream",
      "text": [
       "20: =====================================\n",
-      "20: Tool result:\n",
+      "20: Executing query:\n",
+      "20: \n",
+      "df[(df['ČR, kraje'] == 'Hlavní město Praha') & (df['Kumulace čtvrtletí'] == 'Q1-Q3 2024') & (df['Ukazatel'] == 'Počet obyvatel na počátku období - celkem')]['value'].sum()\n",
+      "\n",
+      "20: =====================================\n",
+      "20: Query result:\n",
       "20: 1384732\n",
       "20: =====================================\n",
-      "1384732\n"
+      "{\"query\": \"\\ndf[(df['ČR, kraje'] == 'Hlavní město Praha') & (df['Kumulace čtvrtletí'] == 'Q1-Q3 2024') & (df['Ukazatel'] == 'Počet obyvatel na počátku období - celkem')]['value'].sum()\\n\", \"result\": \"1384732\"}\n"
      ]
     }
    ],
@@ -205,7 +211,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prototype4a",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
