12 Adding SQLite and SQL Tool; script to load csvs to SQLite DB; cleaning golden dataset

--- a/Evaluations/langsmith_create_golden_dataset.ipynb
+++ b/Evaluations/langsmith_create_golden_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a23d96bb",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "Dataset 'czsu agent' found with ID: e585a306-7113-491d-ba41-bc03c09eb612\n",
-      "Added 29 new examples to dataset 'czsu agent'.\n"
+      "Added 30 new examples to dataset 'czsu agent'.\n"
      ]
     }
    ],
@@ -33,35 +33,35 @@
     "    # Comparisons\n",
     "    \"Did Prague have more residents than Central Bohemia at the start of 2024?\",  # \"No (1384732 < 1455940)\"\n",
     "    \"Which region had higher female population - Liberec or Karlovy Vary at period end?\",  # \"Liberec (228648 > 150270)\"\n",
-    "    \"List regions where mid-period male population exceeded 300,000\",  # \"Česko, Prague, Central Bohemia, Ústí, South Moravia, Moravian-Silesia\"\n",
+    "    \"List regions where mid-period male population exceeded 300,000\",  # \"Central Bohemia, Prague, Ústí, South Moravia, Moravian-Silesia, Ustecky kraj, Jihocesky kraj, Olomoucky kraj, Plzensky kraj\"\n",
     "    \"Was there any quarter where Plzeň's women outnumbered men by >15,000?\",  # \"No (max difference 11235)\"\n",
     "\n",
     "    # Aggregations\n",
     "    \"What was the average male population across all regions at period end?\",  # \"381994.5\"\n",
     "    \"Which region had the lowest total population at the end of Q3?\",  # \"Karlovy Vary (293218)\"\n",
-    "    \"Count how many regions had <500k total residents mid-period\",  # \"5 (Karlovy Vary, Liberec, Vysočina, Olomouc, Zlín)\"\n",
-    "    \"What was the maximum female population recorded in any region?\",  # \"716056 (Prague)\"\n",
+    "    \"Count how many regions had <500k total residents mid-period\",  # \"2 (Karlovy Vary, Liberec)\"\n",
+    "    \"What was the maximum female population recorded in any region?\",  # \"716056\"\n",
     "\n",
     "    # Temporal/Deltas\n",
     "    \"How much did Prague's population grow from start to end of Q3?\",  # \"+7393\"\n",
     "    \"Calculate percentage change in Ústí's male population (start vs end)\",  # \"-0.37%\"\n",
     "    \"Which region had the steepest population decline?\",  # \"Moravian-Silesia (-5730)\"\n",
-    "    \"What was South Bohemia's population change rate per month?\",  # \"-386/month\"\n",
+    "    \"What was South Bohemia's population change rate per month?\",  # \"-128.77 per month\"\n",
     "\n",
     "    # Demographic Ratios\n",
     "    \"What percentage of Pardubice region was female at mid-period?\",  # \"50.57%\"\n",
     "    \"What was the male:female ratio in Vysočina at period start?\",  # \"0.985\"\n",
-    "    \"Which region had the most balanced gender ratio at period end?\",  # \"Vysočina (50.7% female)\"\n",
+    "    \"Which region had the most balanced gender ratio at period end?\",  # \"Vysočina\"\n",
     "    \"How many women per 100 men in Olomouc at mid-year?\",  # \"104.4\"\n",
     "\n",
     "    # Complex Joins/Logic\n",
     "    \"Compare Prague's start vs end population for men and women\",  # \"Men: +5389, Women: +2004\"\n",
-    "    \"Rank regions by population growth rate from start to end\",  # \"1. Prague (+0.53%), 2. Central Bohemia (+0.46%)...\"\n",
+    "    \"Rank regions by population growth rate from start to end\",  # \"1. Prague (+0.53%), 2. Central Bohemia (+0.46%), 3. South Moravia (+0.06%), 4. Czech Republic (-0.03%), 5. Pilsner (-0.04%)\"\n",
     "    \"List regions where women population decreased >1000\",  # \"Ústí (-1466), Moravian-Silesia (-3299)\"\n",
     "    \"Show regions where mid-period population was < start but > end\",  # \"None (no such cases)\"\n",
     "\n",
     "    # Edge Cases\n",
-    "    \"What if Karlovy Vary had no data for mid-period women count?\",  # \"NULL\"\n",
+    "    \"What if Karlovy Vary had no data for mid-period women count?\",  # \"Not true, those data are available\"\n",
     "    \"Show regions with exactly 500,000 residents at any point\",  # \"None\"\n",
     "    \"Find records where male count equals female count\",  # \"None\"\n",
     "    \"List regions with unreported start-period data\",  # \"None (all reported)\"\n",
@@ -79,14 +79,14 @@
     "    # Comparisons\n",
     "    \"No (1384732 < 1455940)\",\n",
     "    \"Liberec (228648 > 150270)\",\n",
-    "    \"Česko, Prague, Central Bohemia, Ústí, South Moravia, Moravian-Silesia\",\n",
+    "    \"Central Bohemia, Prague, Ústí, South Moravia, Moravian-Silesia, Ustecky kraj, Jihocesky kraj, Olomoucky kraj, Plzensky kraj\",\n",
     "    \"No (max difference 11235)\",\n",
     "\n",
     "    # Aggregations\n",
     "    \"≈326000\",\n",
     "    \"Karlovy Vary (293218)\",\n",
     "    \"5 (Karlovy Vary, Liberec, Vysočina, Olomouc, Zlín)\",\n",
-    "    \"716056 (Prague)\",\n",
+    "    \"716056\",\n",
     "\n",
     "    # Temporal/Deltas\n",
     "    \"+7393\",\n",
@@ -97,17 +97,17 @@
     "    # Demographic Ratios\n",
     "    \"50.57%\",\n",
     "    \"0.985\",\n",
-    "    \"Vysočina (50.7% female)\",\n",
+    "    \"Vysočina\",\n",
     "    \"104.4\",\n",
     "\n",
     "    # Complex Joins/Logic\n",
     "    \"Men: +5389, Women: +2004\",\n",
-    "    \"1. Prague (+0.53%), 2. Central Bohemia (+0.46%)...\",\n",
+    "    \"1. Prague (+0.53%), 2. Central Bohemia (+0.46%), 3. South Moravia (+0.06%), 4. Czech Republic (-0.03%), 5. Pilsner (-0.04%)\",\n",
     "    \"Ústí (-1466), Moravian-Silesia (-3299)\",\n",
     "    \"None (no such cases)\",\n",
     "\n",
     "    # Edge Cases\n",
-    "    \"NULL\",\n",
+    "    \"Not true, those data are available\",\n",
     "    \"None\",\n",
     "    \"None\",\n",
     "    \"None (all reported)\"\n",
