--- a/other/testing_tools.ipynb
+++ b/other/testing_tools.ipynb
@@ -17,6 +17,7 @@
     "# IMPORTS\n",
     "#===============================================================================\n",
     "import os\n",
+    "import sqlite3\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "from typing import Optional, Type, ClassVar\n",
@@ -37,6 +38,7 @@
     "\n",
     "# Constants\n",
     "TOOL_ID = 20  # Static ID for PandasQueryTool\n",
+    "SQLITE_TOOL_ID = 21  # Static ID for SQLiteQueryTool\n",
     "\n",
     "# Load data once at module level\n",
     "   \n",
@@ -45,6 +47,7 @@
     "except NameError:\n",
     "    BASE_DIR = Path(os.getcwd()).parents[0]\n",
     "data_path = BASE_DIR / \"data\" / \"OBY01PDT01.csv\"\n",
+    "db_path = BASE_DIR / \"data\" / \"czsu_data.db\"\n",
     "df = pd.read_csv(data_path)\n",
     "\n",
     "#===============================================================================\n",
@@ -151,11 +154,8 @@
     "            debug_print(f\"{TOOL_ID}: {result_value}\")\n",
     "            debug_print(f\"{TOOL_ID}: =====================================\")\n",
     "            \n",
-    "            # Return both query and result for state tracking\n",
-    "            return json.dumps({\n",
-    "                \"query\": query,\n",
-    "                \"result\": result_value\n",
-    "            }, ensure_ascii=False)\n",
+    "            # Return just the string result\n",
+    "            return result_value\n",
     "            \n",
     "        except Exception as e:\n",
     "            raise ToolException(f\"Query error: {str(e)}\")\n",
@@ -166,13 +166,70 @@
     "        run_manager: Optional[AsyncCallbackManagerForToolRun] = None,\n",
     "    ) -> str:\n",
     "        \"\"\"Execute the pandas query asynchronously.\"\"\"\n",
+    "        return self._run(query, run_manager)\n",
+    "\n",
+    "class SQLiteQueryInput(BaseModel):\n",
+    "    \"\"\"Schema for SQLite query input.\"\"\"\n",
+    "    query: str = Field(description=\"SQL query to execute against the database\")\n",
+    "\n",
+    "class SQLiteQueryTool(BaseTool):\n",
+    "    \"\"\"Tool for executing SQL queries against a SQLite database.\"\"\"\n",
+    "    name: ClassVar[str] = \"sqlite_query\"\n",
+    "    description: ClassVar[str] = \"Execute SQL query on the SQLite database\"\n",
+    "    args_schema: Type[BaseModel] = SQLiteQueryInput\n",
+    "    \n",
+    "    def _run(\n",
+    "        self, \n",
+    "        query: str, \n",
+    "        run_manager: Optional[CallbackManagerForToolRun] = None\n",
+    "    ) -> str:\n",
+    "        try:\n",
+    "            check_query_safety(query)\n",
+    "            \n",
+    "            # Debug print query\n",
+    "            debug_print(f\"{SQLITE_TOOL_ID}: =====================================\")\n",
+    "            debug_print(f\"{SQLITE_TOOL_ID}: Executing query:\")\n",
+    "            debug_print(f\"{SQLITE_TOOL_ID}: {query}\")\n",
+    "            debug_print(f\"{SQLITE_TOOL_ID}: =====================================\")\n",
+    "            \n",
+    "            # Execute SQL query\n",
+    "            with sqlite3.connect(db_path) as conn:\n",
+    "                cursor = conn.cursor()\n",
+    "                cursor.execute(query)\n",
+    "                result = cursor.fetchall()\n",
+    "                \n",
+    "            # Format the result\n",
+    "            if not result:\n",
+    "                result_value = \"No results found\"\n",
+    "            elif len(result) == 1 and len(result[0]) == 1:\n",
+    "                result_value = str(result[0][0])\n",
+    "            else:\n",
+    "                result_value = str(result)\n",
+    "            \n",
+    "            # Debug print result\n",
+    "            debug_print(f\"{SQLITE_TOOL_ID}: Query result:\")\n",
+    "            debug_print(f\"{SQLITE_TOOL_ID}: {result_value}\")\n",
+    "            debug_print(f\"{SQLITE_TOOL_ID}: =====================================\")\n",
+    "            \n",
+    "            # Return just the string result (matching PandasQueryTool structure)\n",
+    "            return result_value\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            raise ToolException(f\"Query error: {str(e)}\")\n",
+    "\n",
+    "    async def _arun(\n",
+    "        self,\n",
+    "        query: str,\n",
+    "        run_manager: Optional[AsyncCallbackManagerForToolRun] = None,\n",
+    "    ) -> str:\n",
+    "        \"\"\"Execute the SQL query asynchronously.\"\"\"\n",
     "        return self._run(query, run_manager)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "606b367a",
+   "execution_count": 6,
+   "id": "174bb243",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +245,7 @@
       "20: Query result:\n",
       "20: 1384732\n",
       "20: =====================================\n",
-      "{\"query\": \"\\ndf[(df['ČR, kraje'] == 'Hlavní město Praha') & (df['Kumulace čtvrtletí'] == 'Q1-Q3 2024') & (df['Ukazatel'] == 'Počet obyvatel na počátku období - celkem')]['value'].sum()\\n\", \"result\": \"1384732\"}\n"
+      "1384732\n"
      ]
     }
    ],
@@ -203,6 +260,53 @@
     "try:\n",
     "    result = tool._run(query)\n",
     "    # print(\"Query result:\")\n",
+    "    print(result)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error executing query: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d21efa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21: =====================================\n",
+      "21: Executing query:\n",
+      "21: \n",
+      "SELECT SUM(value) \n",
+      "FROM OBY01PDT01 \n",
+      "WHERE \"ČR, kraje\" = 'Hlavní město Praha' \n",
+      "AND \"Kumulace čtvrtletí\" = 'Q1-Q3 2024' \n",
+      "AND \"Ukazatel\" = 'Počet obyvatel na počátku období - celkem'\n",
+      "\n",
+      "21: =====================================\n",
+      "21: Query result:\n",
+      "21: 1384732\n",
+      "21: =====================================\n",
+      "1384732\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an instance of SQLiteQueryTool and test it with a simple query\n",
+    "tool = SQLiteQueryTool()\n",
+    "\n",
+    "# Test with a SQL query to get the same data as in pandas example\n",
+    "query = \"\"\"\n",
+    "SELECT SUM(value) \n",
+    "FROM OBY01PDT01 \n",
+    "WHERE \"ČR, kraje\" = 'Hlavní město Praha' \n",
+    "AND \"Kumulace čtvrtletí\" = 'Q1-Q3 2024' \n",
+    "AND \"Ukazatel\" = 'Počet obyvatel na počátku období - celkem'\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    result = tool._run(query)\n",
     "    print(result)\n",
     "except Exception as e:\n",
     "    print(f\"Error executing query: {e}\")"
