15 Additions to LLM System Prompts based on evaluation results. Adding dataset examples (or different datasets with synthetic examples for experimentation purposes)

--- a/Evaluations/langsmith_create_golden_dataset_problematic1.ipynb
+++ b/Evaluations/langsmith_create_golden_dataset_problematic1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a23d96bb",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset 'czsu agent' found with ID: e585a306-7113-491d-ba41-bc03c09eb612\n",
-      "Added 30 new examples to dataset 'czsu agent'.\n"
+      "Dataset 'czsu agent problematic1' found with ID: be16fded-6640-48e6-b2cd-2c87fdc7dfbb\n",
+      "Added 8 new examples to dataset 'czsu agent problematic1'.\n"
      ]
     }
    ],
@@ -23,71 +23,49 @@
     "# Define questions and answers for the golden dataset\n",
     "question_answers = {\n",
     "    # Basic Retrieval\n",
-    "    \"What is the amount of men in Prague at the end of Q3 2024?\": \"676069\",\n",
-    "    \"What is the amount of women in Prague at the end of Q3 2024?\": \"716056\",\n",
-    "    \"What is the amount of women in Zlin region at the end of Q3 2024?\": \"294996\",\n",
-    "    \"What was the total population of Czech Republic at the start of Q1-Q3 2024?\": \"10900555\",\n",
-    "    \"Show me the female population in South Moravia at mid-2024?\": \"625214\",\n",
     "    \"What was the middle-period population count for Zlín Region?\": \"579562\",\n",
     "\n",
+    "\n",
     "    # Comparisons\n",
-    "    \"Did Prague have more residents than Central Bohemia at the start of 2024?\":\n",
-    "        \"No (1384732 < 1455940)\",\n",
-    "    \"Which region had higher female population - Liberec or Karlovy Vary at period end?\":\n",
-    "        \"Liberec (228648 > 150270)\",\n",
     "    \"List regions where mid-period male population exceeded 300,000\":\n",
     "        \"Central Bohemia, Prague, South Moravia, Moravian-Silesia, Pilsner, South Bohemia, Olomouc, Ústí\",\n",
     "    \"Was there any quarter where Plzeň's women outnumbered men by >15,000?\":\n",
     "        \"No\",\n",
     "\n",
+    "\n",
     "    # Aggregations\n",
-    "    \"What was the average male population across all regions at period end?\": \"381994.5\",\n",
-    "    \"Which region had the lowest total population at the end of Q3?\": \"Karlovy Vary (293218)\",\n",
-    "    \"Count how many regions had <500k total residents mid-period\": \"2\",\n",
     "    \"What was the maximum female population recorded in any region?\": \"743608\",\n",
+    "    \"What was the average male population across all regions at period end?\": \"381994.5\",\n",
+    "    \"Count how many regions had <500k total residents mid-period\": \"2\",\n",
+    "\n",
     "\n",
     "    # Temporal/Deltas\n",
-    "    \"How much did Prague's population grow from start to end of Q3?\": \"+7393\",\n",
-    "    \"Calculate percentage change in Ústí's male population (start vs end)\": \"-0.37%\",\n",
-    "    \"Which region had the steepest population decline?\": \"Moravian-Silesia (-5730)\",\n",
     "    \"What was South Bohemia's population change rate per month?\": \"-128.77 per month\",\n",
     "\n",
+    "\n",
     "    # Demographic Ratios\n",
-    "    \"What percentage of Pardubice region was female at mid-period?\": \"50.57%\",\n",
-    "    \"What was the male:female ratio in Vysočina at period start?\": \"0.985\",\n",
     "    \"Which region had the most balanced gender ratio at period end?\": \"Vysočina\",\n",
-    "    \"How many women per 100 men in Olomouc at mid-year?\": \"104.4\",\n",
+    "    \"What percentage of Pardubice region was female at mid-period?\": \"50.57%\",\n",
+    "\n",
     "\n",
     "    # Complex Joins/Logic\n",
-    "    \"Compare Prague's start vs end population for men and women\":\n",
-    "        \"Men: +5389, Women: +2004\",\n",
-    "    \"Rank regions by population growth rate from start to end\":\n",
-    "        \"1. Prague (+0.53%), 2. Central Bohemia (+0.46%), 3. South Moravia (+0.06%), 4. Czech Republic (-0.03%), 5. Pilsner (-0.04%)\",\n",
     "    \"List regions where women population decreased >1000\":\n",
-    "        \"Ústí (-1466), Moravian-Silesia (-3299)\",\n",
-    "    \"Show regions where mid-period population was < start but > end\":\n",
-    "        \"there are no such cases\",\n",
+    "        \"Ústí (1466), Moravian-Silesia (3299), Karlovarský kraj (1228), Liberecký kraj (1142), Plzeňský kraj (1073)\",\n",
+    "\n",
     "\n",
     "    # Edge Cases\n",
-    "    \"What if Karlovy Vary had no data for mid-period women count?\":\n",
-    "        \"Not true, those data are available\",\n",
-    "    \"Show regions with exactly 500,000 residents at any point\":\n",
-    "        \"there are None\",\n",
-    "    \"Find records where male count equals female count\":\n",
-    "        \"there are None\",\n",
-    "    \"List regions with unreported start-period data\":\n",
-    "        \"there are None (all reported)\"\n",
+    "\n",
     "}\n",
     "\n",
     "ls_client = Client()\n",
     "\n",
     "# Get or create dataset\n",
     "try:\n",
-    "    dataset = ls_client.read_dataset(dataset_name=\"czsu agent\")\n",
+    "    dataset = ls_client.read_dataset(dataset_name=\"czsu agent problematic1\")\n",
     "    print(f\"Dataset '{dataset.name}' found with ID: {dataset.id}\")\n",
     "except LangSmithNotFoundError:\n",
     "    dataset = ls_client.create_dataset(\n",
-    "        dataset_name=\"czsu agent\",\n",
+    "        dataset_name=\"czsu agent problematic1\",\n",
     "        description=\"Dataset of Czech Statistical Office agent questions and answers.\"\n",
     "    )\n",
     "    print(f\"Dataset '{dataset.name}' created with ID: {dataset.id}\")\n",
@@ -116,7 +94,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prototype4a",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
