--- a/other/t2.ipynb
+++ b/other/t2.ipynb
@@ -39,6 +39,105 @@
     "# Show plot\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b989e566",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from langchain_openai import AzureChatOpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "387fe311",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data[0]: length=3072, [0.022330209612846375, -0.002088305074721575, ..., -0.014379994943737984, 0.006100048776715994]\n",
+      "data[1]: length=3072, [0.011640272103250027, 0.005252661183476448, ..., -0.028720801696181297, -0.0025770869106054306]\n",
+      "data[2]: length=3072, [0.016326788812875748, -0.0018455119570717216, ..., -0.005349587649106979, 0.006049444433301687]\n",
+      "Usage(prompt_tokens=6, total_tokens=6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from openai import AzureOpenAI\n",
+    "\n",
+    "endpoint = \"https://mimi-test-openai2.openai.azure.com/\"\n",
+    "model_name = \"text-embedding-3-large\"\n",
+    "deployment = \"text-embedding-3-large__test1\"\n",
+    "\n",
+    "api_version = \"2024-02-01\"\n",
+    "\n",
+    "client = AzureOpenAI(\n",
+    "    api_version=\"2024-12-01-preview\",\n",
+    "    azure_endpoint=os.getenv('AZURE_OPENAI_ENDPOINT'),\n",
+    "    api_key=os.getenv('AZURE_OPENAI_API_KEY')\n",
+    ")\n",
+    "\n",
+    "response = client.embeddings.create(\n",
+    "    input=[\"first phrase\",\"second phrase\",\"third phrase\"],\n",
+    "    model=deployment\n",
+    ")\n",
+    "\n",
+    "for item in response.data:\n",
+    "    length = len(item.embedding)\n",
+    "    print(\n",
+    "        f\"data[{item.index}]: length={length}, \"\n",
+    "        f\"[{item.embedding[0]}, {item.embedding[1]}, \"\n",
+    "        f\"..., {item.embedding[length-2]}, {item.embedding[length-1]}]\"\n",
+    "    )\n",
+    "print(response.usage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94a844c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39064d25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dc7a5d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70591a33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d8fb8cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
