--- a/visualize_graph.ipynb
+++ b/visualize_graph.ipynb
@@ -3380,7 +3380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prototype4a",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
