--- a/visualize_graph.ipynb
+++ b/visualize_graph.ipynb
@@ -12,6 +12,8 @@
      "text": [
       "digraph {\n",
       "\t__start__\n",
+      "\tretrieve_similar_selections\n",
+      "\trelevant_selections\n",
       "\tget_schema\n",
       "\tquery_gen\n",
       "\treflect\n",
@@ -19,13 +21,15 @@
       "\tsubmit_final_answer\n",
       "\tsave\n",
       "\t__end__\n",
-      "\t__start__ -> get_schema\n",
+      "\t__start__ -> retrieve_similar_selections\n",
       "\tformat_answer -> submit_final_answer\n",
       "\tget_schema -> query_gen\n",
       "\tquery_gen -> format_answer\n",
       "\tquery_gen -> reflect\n",
       "\treflect -> format_answer\n",
       "\treflect -> query_gen\n",
+      "\trelevant_selections -> get_schema\n",
+      "\tretrieve_similar_selections -> relevant_selections\n",
       "\tsubmit_final_answer -> save\n",
       "\tsave -> __end__\n",
       "}\n",
@@ -35,110 +39,134 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"185pt\" height=\"548pt\" viewBox=\"0.00 0.00 185.43 548.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 544)\">\n",
-       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-544 181.43,-544 181.43,4 -4,4\"/>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"238pt\" height=\"692pt\" viewBox=\"0.00 0.00 238.43 692.00\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 688)\">\n",
+       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-688 234.43,-688 234.43,4 -4,4\"/>\n",
        "<!-- __start__ -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>__start__</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"57.71\" cy=\"-522\" rx=\"45.21\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"57.71\" y=\"-516.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__start__</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-666\" rx=\"45.21\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-660.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__start__</text>\n",
+       "</g>\n",
+       "<!-- retrieve_similar_selections -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>retrieve_similar_selections</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-594\" rx=\"110.72\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-588.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">retrieve_similar_selections</text>\n",
+       "</g>\n",
+       "<!-- __start__&#45;&gt;retrieve_similar_selections -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>__start__-&gt;retrieve_similar_selections</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M110.72,-647.7C110.72,-640.41 110.72,-631.73 110.72,-623.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"114.22,-623.62 110.72,-613.62 107.22,-623.62 114.22,-623.62\"/>\n",
+       "</g>\n",
+       "<!-- relevant_selections -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>relevant_selections</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-522\" rx=\"81.55\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-516.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">relevant_selections</text>\n",
+       "</g>\n",
+       "<!-- retrieve_similar_selections&#45;&gt;relevant_selections -->\n",
+       "<g id=\"edge9\" class=\"edge\">\n",
+       "<title>retrieve_similar_selections-&gt;relevant_selections</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M110.72,-575.7C110.72,-568.41 110.72,-559.73 110.72,-551.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"114.22,-551.62 110.72,-541.62 107.22,-551.62 114.22,-551.62\"/>\n",
        "</g>\n",
        "<!-- get_schema -->\n",
-       "<g id=\"node2\" class=\"node\">\n",
+       "<g id=\"node4\" class=\"node\">\n",
        "<title>get_schema</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"57.71\" cy=\"-450\" rx=\"54.93\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"57.71\" y=\"-444.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">get_schema</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-450\" rx=\"54.93\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-444.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">get_schema</text>\n",
        "</g>\n",
-       "<!-- __start__&#45;&gt;get_schema -->\n",
-       "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>__start__-&gt;get_schema</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M57.71,-503.7C57.71,-496.41 57.71,-487.73 57.71,-479.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"61.21,-479.62 57.71,-469.62 54.21,-479.62 61.21,-479.62\"/>\n",
+       "<!-- relevant_selections&#45;&gt;get_schema -->\n",
+       "<g id=\"edge8\" class=\"edge\">\n",
+       "<title>relevant_selections-&gt;get_schema</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M110.72,-503.7C110.72,-496.41 110.72,-487.73 110.72,-479.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"114.22,-479.62 110.72,-469.62 107.22,-479.62 114.22,-479.62\"/>\n",
        "</g>\n",
        "<!-- query_gen -->\n",
-       "<g id=\"node3\" class=\"node\">\n",
+       "<g id=\"node5\" class=\"node\">\n",
        "<title>query_gen</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"57.71\" cy=\"-378\" rx=\"49.82\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"57.71\" y=\"-372.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">query_gen</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-378\" rx=\"49.82\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-372.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">query_gen</text>\n",
        "</g>\n",
        "<!-- get_schema&#45;&gt;query_gen -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
        "<title>get_schema-&gt;query_gen</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M57.71,-431.7C57.71,-424.41 57.71,-415.73 57.71,-407.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"61.21,-407.62 57.71,-397.62 54.21,-407.62 61.21,-407.62\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M110.72,-431.7C110.72,-424.41 110.72,-415.73 110.72,-407.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"114.22,-407.62 110.72,-397.62 107.22,-407.62 114.22,-407.62\"/>\n",
        "</g>\n",
        "<!-- reflect -->\n",
-       "<g id=\"node4\" class=\"node\">\n",
+       "<g id=\"node6\" class=\"node\">\n",
        "<title>reflect</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"57.71\" cy=\"-306\" rx=\"34.46\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"57.71\" y=\"-300.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">reflect</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-306\" rx=\"34.46\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-300.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">reflect</text>\n",
        "</g>\n",
        "<!-- query_gen&#45;&gt;reflect -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
        "<title>query_gen-&gt;reflect</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M51.8,-359.7C51.05,-352.41 50.8,-343.73 51.07,-335.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"54.56,-335.82 51.72,-325.61 47.57,-335.36 54.56,-335.82\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M104.81,-359.7C104.05,-352.41 103.81,-343.73 104.07,-335.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"107.56,-335.82 104.73,-325.61 100.58,-335.36 107.56,-335.82\"/>\n",
        "</g>\n",
        "<!-- format_answer -->\n",
-       "<g id=\"node5\" class=\"node\">\n",
+       "<g id=\"node7\" class=\"node\">\n",
        "<title>format_answer</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"88.71\" cy=\"-234\" rx=\"66.71\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"88.71\" y=\"-228.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">format_answer</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"141.72\" cy=\"-234\" rx=\"66.71\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"141.72\" y=\"-228.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">format_answer</text>\n",
        "</g>\n",
        "<!-- query_gen&#45;&gt;format_answer -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
        "<title>query_gen-&gt;format_answer</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M75.86,-360.76C85.23,-351.13 95.72,-338.07 100.71,-324 107.68,-304.35 104.1,-280.95 99.08,-263.07\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"102.46,-262.16 96.13,-253.66 95.78,-264.25 102.46,-262.16\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M128.86,-360.76C138.24,-351.13 148.73,-338.07 153.72,-324 160.69,-304.35 157.1,-280.95 152.09,-263.07\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"155.47,-262.16 149.14,-253.66 148.79,-264.25 155.47,-262.16\"/>\n",
        "</g>\n",
        "<!-- reflect&#45;&gt;query_gen -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
        "<title>reflect-&gt;query_gen</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M63.61,-324.1C64.37,-331.37 64.62,-340.04 64.37,-348.24\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"60.88,-347.98 63.73,-358.19 67.86,-348.43 60.88,-347.98\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M116.62,-324.1C117.38,-331.37 117.63,-340.04 117.37,-348.24\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"113.88,-347.98 116.73,-358.19 120.87,-348.43 113.88,-347.98\"/>\n",
        "</g>\n",
        "<!-- reflect&#45;&gt;format_answer -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
        "<title>reflect-&gt;format_answer</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M65.22,-288.05C68.59,-280.43 72.67,-271.23 76.47,-262.65\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"79.6,-264.22 80.45,-253.66 73.2,-261.39 79.6,-264.22\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M118.23,-288.05C121.6,-280.43 125.68,-271.23 129.48,-262.65\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"132.61,-264.22 133.46,-253.66 126.21,-261.39 132.61,-264.22\"/>\n",
        "</g>\n",
        "<!-- submit_final_answer -->\n",
-       "<g id=\"node6\" class=\"node\">\n",
+       "<g id=\"node8\" class=\"node\">\n",
        "<title>submit_final_answer</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"88.71\" cy=\"-162\" rx=\"88.71\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"88.71\" y=\"-156.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">submit_final_answer</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"141.72\" cy=\"-162\" rx=\"88.71\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"141.72\" y=\"-156.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">submit_final_answer</text>\n",
        "</g>\n",
        "<!-- format_answer&#45;&gt;submit_final_answer -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
        "<title>format_answer-&gt;submit_final_answer</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M88.71,-215.7C88.71,-208.41 88.71,-199.73 88.71,-191.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"92.21,-191.62 88.71,-181.62 85.21,-191.62 92.21,-191.62\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M141.72,-215.7C141.72,-208.41 141.72,-199.73 141.72,-191.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"145.22,-191.62 141.72,-181.62 138.22,-191.62 145.22,-191.62\"/>\n",
        "</g>\n",
        "<!-- save -->\n",
-       "<g id=\"node7\" class=\"node\">\n",
+       "<g id=\"node9\" class=\"node\">\n",
        "<title>save</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"88.71\" cy=\"-90\" rx=\"27.3\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"88.71\" y=\"-84.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">save</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"141.72\" cy=\"-90\" rx=\"27.3\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"141.72\" y=\"-84.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">save</text>\n",
        "</g>\n",
        "<!-- submit_final_answer&#45;&gt;save -->\n",
-       "<g id=\"edge8\" class=\"edge\">\n",
+       "<g id=\"edge10\" class=\"edge\">\n",
        "<title>submit_final_answer-&gt;save</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M88.71,-143.7C88.71,-136.41 88.71,-127.73 88.71,-119.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"92.21,-119.62 88.71,-109.62 85.21,-119.62 92.21,-119.62\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M141.72,-143.7C141.72,-136.41 141.72,-127.73 141.72,-119.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"145.22,-119.62 141.72,-109.62 138.22,-119.62 145.22,-119.62\"/>\n",
        "</g>\n",
        "<!-- __end__ -->\n",
-       "<g id=\"node8\" class=\"node\">\n",
+       "<g id=\"node10\" class=\"node\">\n",
        "<title>__end__</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"88.71\" cy=\"-18\" rx=\"42.65\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"88.71\" y=\"-12.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__end__</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"141.72\" cy=\"-18\" rx=\"42.65\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"141.72\" y=\"-12.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__end__</text>\n",
        "</g>\n",
        "<!-- save&#45;&gt;__end__ -->\n",
-       "<g id=\"edge9\" class=\"edge\">\n",
+       "<g id=\"edge11\" class=\"edge\">\n",
        "<title>save-&gt;__end__</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M88.71,-71.7C88.71,-64.41 88.71,-55.73 88.71,-47.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"92.21,-47.62 88.71,-37.62 85.21,-47.62 92.21,-47.62\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M141.72,-71.7C141.72,-64.41 141.72,-55.73 141.72,-47.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"145.22,-47.62 141.72,-37.62 138.22,-47.62 145.22,-47.62\"/>\n",
        "</g>\n",
        "</g>\n",
        "</svg>"
@@ -3380,7 +3408,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "prototype4a",
    "language": "python",
    "name": "python3"
   },
