33 Renaming project based on pip standard, lowercase with dashes

--- a/Evaluations/DEBUG/debug_phoenix_evals__llm_as_a_judge.ipynb
+++ b/Evaluations/DEBUG/debug_phoenix_evals__llm_as_a_judge.ipynb
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\retko\\anaconda3\\envs\\CZSU_Multi_Agent_Appa\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\retko\\anaconda3\\envs\\czsu-multi-agent-text-to-sqla\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -616,7 +616,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CZSU_Multi_Agent_Appa",
+   "display_name": "czsu-multi-agent-text-to-sqla",
    "language": "python",
    "name": "python3"
   },
