--- a/Evaluations/Goden_Datasets/langsmith_create_golden_dataset.ipynb
+++ b/Evaluations/Goden_Datasets/langsmith_create_golden_dataset.ipynb
@@ -116,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CZSU_Multi_Agent_App",
+   "display_name": "czsu-multi-agent-text-to-sql",
    "language": "python",
    "name": "python3"
   },
