--- a/Evaluations/Phoenix_Evaluation/phoenix_benchmark_evaluate_QA_classifications.ipynb
+++ b/Evaluations/Phoenix_Evaluation/phoenix_benchmark_evaluate_QA_classifications.ipynb
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project root: C:\\Users\\mmiscanuk\\OneDrive\\Knowledge Base\\0207_GenAI\\Code\\LangGraph\\testing_prototypes\\CZSU_Multi_Agent_Appb\\CZSU_Multi_Agent_App\n"
+      "Project root: C:\\Users\\mmiscanuk\\OneDrive\\Knowledge Base\\0207_GenAI\\Code\\LangGraph\\testing_prototypes\\czsu-multi-agent-text-to-sqlb\\czsu-multi-agent-text-to-sql\n"
      ]
     }
    ],
@@ -106,11 +106,11 @@
     "import pandas as pd\n",
     "\n",
     "# -------------------------------------------------------------------\n",
-    "# Ensure CZSU_Multi_Agent_App root is on sys.path\n",
+    "# Ensure czsu-multi-agent-text-to-sql root is on sys.path\n",
     "# -------------------------------------------------------------------\n",
     "# Get the absolute path to the project root (parent of Evaluations)\n",
     "NOTEBOOK_DIR = Path().resolve()  # Current notebook directory\n",
-    "PROJECT_ROOT = NOTEBOOK_DIR.parent  # CZSU_Multi_Agent_App root directory\n",
+    "PROJECT_ROOT = NOTEBOOK_DIR.parent  # czsu-multi-agent-text-to-sql root directory\n",
     "\n",
     "print(f\"Project root: {PROJECT_ROOT}\")\n",
     "\n",
