--- a/Evaluations/Phoenix_Evaluation/phoenix_evaluate_agent_output_using_LLM.ipynb
+++ b/Evaluations/Phoenix_Evaluation/phoenix_evaluate_agent_output_using_LLM.ipynb
@@ -60,7 +60,7 @@
     "from typing import Dict, Any, List\n",
     "\n",
     "# -------------------------------------------------------------------\n",
-    "# Ensure CZSU_Multi_Agent_App root (parent of Evaluations) is on sys.path\n",
+    "# Ensure czsu-multi-agent-text-to-sql root (parent of Evaluations) is on sys.path\n",
     "# -------------------------------------------------------------------\n",
     "# Simple path resolution for notebook environment\n",
     "import os\n",
@@ -202,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\mmiscanuk\\AppData\\Local\\anaconda3\\envs\\CZSU_Multi_Agent_Appb\\Lib\\site-packages\\phoenix\\utilities\\client.py:60: UserWarning: The Phoenix server (8.27.0) and client (8.29.0) versions are mismatched and may have compatibility issues.\n",
+      "c:\\Users\\mmiscanuk\\AppData\\Local\\anaconda3\\envs\\czsu-multi-agent-text-to-sqlb\\Lib\\site-packages\\phoenix\\utilities\\client.py:60: UserWarning: The Phoenix server (8.27.0) and client (8.29.0) versions are mismatched and may have compatibility issues.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -590,11 +590,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\mmiscanuk\\AppData\\Local\\anaconda3\\envs\\CZSU_Multi_Agent_Appb\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\Users\\mmiscanuk\\AppData\\Local\\anaconda3\\envs\\czsu-multi-agent-text-to-sqlb\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\mmiscanuk\\AppData\\Local\\anaconda3\\envs\\CZSU_Multi_Agent_Appb\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\Users\\mmiscanuk\\AppData\\Local\\anaconda3\\envs\\czsu-multi-agent-text-to-sqlb\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\mmiscanuk\\AppData\\Local\\anaconda3\\envs\\CZSU_Multi_Agent_Appb\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\Users\\mmiscanuk\\AppData\\Local\\anaconda3\\envs\\czsu-multi-agent-text-to-sqlb\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     },
