--- a/visualize_graph.ipynb
+++ b/visualize_graph.ipynb
@@ -582,7 +582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CZSU_Multi_Agent_Appa",
+   "display_name": "czsu-multi-agent-text-to-sqla",
    "language": "python",
    "name": "python3"
   },
